--- a/views/admin/layouts/adminHeader.ejs
+++ b/views/admin/layouts/adminHeader.ejs
@@ -26,6 +26,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css" rel="stylesheet">
+
+
+<link rel="stylesheet" type="text/css" href="/static/userAssets/css/styles.css">
+
     
 
 </head>
