--- a/views/admin/layouts/adminMainFooter.ejs
+++ b/views/admin/layouts/adminMainFooter.ejs
@@ -5,6 +5,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
+
 
   
 </body>
