--- a/views/admin/userOrders.ejs
+++ b/views/admin/userOrders.ejs
@@ -1,150 +1,94 @@
 <%- include("../admin/layouts/adminHeader.ejs") %>
 
-
 <body class="g-sidenav-show bg-gray-200">
   <%- include("../admin/layouts/adminSideBar.ejs") %>
-    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
-      <!-- Navbar -->
-      <%- include("../admin/layouts/adminNavBar.ejs") %>
-      <!-- End Navbar -->
-      <div class="container-fluid py-4">
-        <div class="row">
-          <div class="col-12 col-md-8 col-lg-9 elemDesign" style=" width: 1320px;">
-            <div class="card my-4">
-              <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 elemDesign2">
-                <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-                 
-                  <h6 class="text-white text-capitalize ps-3">ORDERS</h6>
-                </div>
+  <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
+    <!-- Navbar -->
+    <%- include("../admin/layouts/adminNavBar.ejs") %>
+    <!-- End Navbar -->
+    <div class="container-fluid py-4">
+      <div class="row">
+        <div class="col-12 col-md-8 col-lg-9 elemDesign" style="width: 1320px;">
+          <div class="card my-4">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 elemDesign2">
+              <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+                <h6 class="text-white text-capitalize ps-3">ORDERS</h6>
               </div>
-              <div class="card-body px-0 pb-2">
-                <div class="table-responsive p-0">
-                  <table class="table table-dark">
-                    <thead>
+            </div>
+            <div class="card-body px-0 pb-2">
+              <div class="table-responsive">
+                <table class="table" id="user-table">
+                  <thead>
+                    <tr>
+                      <th> User </th>
+                      <th> Order Date</th>
+                      <th> Quantity</th>
+                      <th> Price</th>
+                      <th> Payment Status</th>
+                      <th> Order Status</th>
+                      <th> Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% for (i = orders.length - 1; i >= 0; i--) { %>
                       <tr>
-                  <th>No.</th>
-                  <th>Order Id</th>
-                  <th>Order Date</th>
-                  <th>Payment</th>
-                  <th>Status</th>
-                  <th>View</th>
+                        <!-- list -->
+                        <td><%= orders[i].user.email %></td>
+                        <td>
+                          <span style="font-weight: 100;" class="pl-2">
+                            <%= orders[i].orderDetails.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-') %>
+                          </span>
+                        </td>
+                        <td><%= orders[i].orderDetails.quantity %></td>
+                        <td>₹<%= orders[i].orderDetails.totalAmount %></td>
+                        <td>
+                          <button
+                            <% if (orders[i].orderDetails.paymentStatus == "Pending") { %>
+                              class="btn-inverse-warning"
+                            <% } else if (orders[i].orderDetails.paymentStatus == "Success") { %>
+                              class="btn-inverse-success"
+                            <% } else if (orders[i].orderDetails.paymentStatus == "Failed") { %>
+                              class="btn-inverse-danger"
+                            <% } %>
+                          ><%= orders[i].orderDetails.paymentStatus %></button>
+                        </td>
+                        <td>
+                          <p
+                            <% if (orders[i].orderDetails.paymentStatus == "Delivered") { %>
+                              class="btn-inverse-warning"
+                            <% } else if (orders[i].orderDetails.OrderStatus == "Pending") { %>
+                              class="btn-inverse-warning"
+                            <% } else if (orders[i].orderDetails.OrderStatus == "Placed") { %>
+                              class="btn-inverse-primary"
+                            <% } else if (orders[i].orderDetails.OrderStatus == "Shipped") { %>
+                              class="btn-inverse-info"
+                            <% } else if (orders[i].orderDetails.OrderStatus == "Delivered") { %>
+                              class="btn-inverse-success"
+                            <% } else if (orders[i].orderDetails.OrderStatus == "Cancelled") { %>
+                              class="btn-inverse-danger"
+                            <% } else if (orders[i].orderDetails.OrderStatus == "OutforDelivery") { %>
+                              class="btn-warning btn-sm"
+                            <% } %>
+                          ><%= orders[i].orderDetails.OrderStatus %></p>
+                        </td>
+                        <td>
+                          <a href="/admin/orderFullDetails?orderId=<%= orders[i].orderDetails._id %>&productId=<%= orders[i].product._id %>"
+                            class="btn btn-inverse-info">Manage</a>
+                        </td>
                       </tr>
-                    </thead>
-                    <tbody>
-                      <% if(orders.length > 0) { orders.forEach((orders, index) => {
-                        %>
-                        <tr>
-                          
-                          <td style="color: rgb(0, 123, 231);" class="text-center">
-                            <%= index +1 %>
-                          </td>
-                          <td style="color: aliceblue;" class="text-center">
-                            <%= orders.uniqueId %>
-                          </td>
-                          <td style="color: aliceblue;" class="text-center">
-                            <%= orders.date.toLocaleDateString('en-US', { year:
-                              'numeric', month: 'short', day: '2-digit' }).replace(/\//g,
-                              '-') %>
-                          </td>
-                          <td style="color: aliceblue;" class="text-center">
-                            <%= orders.totalAmount%>
-                          </td>
-                          <td style="color: aliceblue;" class="text-center">
-                            <%= orders.status %>
-                          </td>
-                          <td style="color: aliceblue;" class="text-center">
-                            <div class="card-title">
-                              <a href="/admin/orderFullDetails?id=<%= orders._id %>">
-                                <button type="button" class="btn btn-success btn-md" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                  Details
-                                </button>
-                              </a>
-                            </div>
-                          </td>
-                        
-                          
-                        </tr>
-                        <% }) %> <% }else{ %> <% }%>
-                    </tbody>
-                  </table>
-                  <!-- Pagination -->
-                  
-        
-
-        <!-- Pagination End -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 col-lg-3 elemDesign">
-            <!-- Sidebar content for medium and large screens -->
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> -->
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg"> <!-- Use modal-lg to make the modal larger -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <div class="card">
-                <img src="image1.jpg" class="card-img-top" alt="Image 1">
-                <div class="card-body">
-                  <h5 class="card-title">Card 1</h5>
-                  <p class="card-text">Description for Card 1.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="image2.jpg" class="card-img-top" alt="Image 2">
-                <div class="card-body">
-                  <h5 class="card-title">Card 2</h5>
-                  <p class="card-text">Description for Card 2.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="image3.jpg" class="card-img-top" alt="Image 3">
-                <div class="card-body">
-                  <h5 class="card-title">Card 3</h5>
-                  <p class="card-text">Description for Card 3.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="image4.jpg" class="card-img-top" alt="Image 4">
-                <div class="card-body">
-                  <h5 class="card-title">Card 4</h5>
-                  <p class="card-text">Description for Card 4.</p>
-                </div>
+                    <% } %>
+                    <!-- list -->
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <div class="col-12 col-md-4 col-lg-3 elemDesign">
+          <!-- Sidebar content for medium and large screens -->
+        </div>
       </div>
     </div>
-  </div>
-</div>
-
-
-    <%- include("../admin/layouts/adminFooter.ejs") %>
+  </main>
+  <%- include("../admin/layouts/adminFooter.ejs") %>
+</body>
